<resources>
    <string name="app_name">TaKa</string>
<!--System-->
    <string name="et_search_bar">Bạn muốn tìm gì</string>
    <string name="notifyCheckInternet">Không có kết nối Interner, kiểm tra lại kết nối.</string>
    <string name="notifyCheckLogin">Chưa đăng nhập bạn muốn đăng nhập không.</string>
    <string name="Login">Đăng nhập</string>
    <string name="returnConnect">Kết nối lại</string>
    <string name="cancelNotify">Đóng</string>
    <string name="dialogTile">Thông báo</string>
<!--NavigationBar-->
    <string name="function_home">Trang chủ</string>
    <string name="function_Category">Danh mục</string>
    <string name="function_new">Bản tin</string>
    <string name="function_Notification">Thông báo</string>
    <string name="function_user">Tài khoản</string>
<!--HomeFragment-->
    <string name="sale_in_day">Deal sốc trong ngày.</string>
    <string name="HotDeal">Hot Deal</string>
    <string name="BestPrice">Giá tốt</string>
    <string name="NewItemHome">Mới</string>
    <string name="showAll">Tất cả</string>
    <string name="item_your_like">Có thể bạn sẽ thích.</string>
<!--CategoryFragment-->
    <string name="show_all">TẤT CẢ</string>
    <string name="category_tile">DANH MỤC</string>
    <string name="toy_and_mom">Đồ chơi-Mẹ và bé</string>
    <string name="phone_and_tablet">Điện thoại-Máy tính bảng</string>
    <string name="cosmetic">Mỹ phẩm-Sức Khỏe</string>
    <string name="electric_appliances">Điện gia dụng</string>
    <string name="women_fashion">Thời trang nữ</string>
    <string name="men_fashion">Thời trang nam</string>
    <string name="jewelry">Trang sức-Phụ kiện</string>
    <string name="laptop_pc">Laptop-PC-Phụ kiện</string>
    <string name="car_moto">Ô tô-Xe máy</string>
<!--Detail Item-->
    <string name="characteristics">Thông tin sản phẩm</string>
    <string name="btnBuy">Mua</string>
<!--Show All Item-->
    <string name="sort">Sắp xếp: </string>
<!--Sort menu-->
    <string name="newItem">Hàng mới</string>
    <string name="hotItem">Bán chạy</string>
    <string name="lowPrice">Giá thấp</string>
    <string name="hightPrice">Giá cao</string>
</resources>